# cmake_template

./: CMakeLists.txt  CMakePresets.json  Dependencies.cmake  conanfile.txt
.github/workflows/: ci.yml  codeql-analysis.yml  conan-build.yml  template-janitor.yml
cmake/: Conan.cmake  PackageProject.cmake  conan_provider.cmake
fuzz_test/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt
test/: CMakeLists.txt
